--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,40 @@
+.nav {
+  width: 100%;
+  padding: 30px 15vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 700;
+  color: #707070;
+  background-color: white;
+  z-index: 99;
+}
 
+.logo {
+  width: 50%;
+}
+
+.links {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.links button {
+  background-color: #C4D446;
+  color: white;
+  border: 1px solid #C4D446;
+  padding: 10px 20px;
+  border-radius: 0.2rem;
+  font-weight: 700;
+  transition-duration: 0.2s;
+}
+.links button:hover {
+  border: 1px solid #C4D446;
+  color: #C4D446;
+  background-color: transparent;
+}
 
 /*# sourceMappingURL=Navbar.css.map */
