--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -25,7 +25,7 @@
 
 .cards{
     padding: 60px 15vw;
-    width: 100%;
+    // width: 100%;
     background-color: #F5F5F5;
     .cardParent{
         display: flex;
