--- a/src/styles/scss/navbar.scss
+++ b/src/styles/scss/navbar.scss
@@ -1,23 +1,29 @@
 .nav{
-    width: 100%;
+    box-sizing: border-box;
+    width: 100vw;
     padding: 30px 15vw;
     position: fixed;
     top: 0;
     left: 0;
     display: flex;
     justify-content: space-between;
-    font-weight: 700;
     color: #707070;
     background-color: white;
     z-index: 99;
 }
 
 .logo{
-    width: 50%;
+    display: flex;
+    align-items: center;
+    img{
+        height: 25px;
+    }
 }
 
 .links{
     width: 50%;
+    font-weight: 700;
+    font-size: 12px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
