--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -5,9 +5,8 @@
 }
 
 .hero{
-    padding: 0 15vw;
+    padding: 50px 15vw;
     height: 50vh;
-    padding-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,6 +28,7 @@
     background-color: #F5F5F5;
     .cardParent{
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-evenly;
     }
 }
@@ -41,18 +41,4 @@
 
 .accordions{
     padding: 60px 15vw;
-}
-
-footer{
-    display: flex;
-    justify-content: space-between;
-    font-size: 10px;
-    padding: 40px 0;
-    border-top: 1px solid #CCCCCC;
-    margin: 0 100px;
-    color: #707070;
-    img{
-        height: 15px;
-        margin: 0 10px;
-    }
 }
