--- a/src/styles/css/Card.css
+++ b/src/styles/css/Card.css
@@ -1,9 +1,10 @@
 .card {
-  width: 30%;
+  width: 80%;
   background-color: transparent;
   text-align: start;
   border: none;
   color: #707070;
+  padding: 10px 0;
 }
 .card img {
   width: 100%;
@@ -16,6 +17,12 @@
 }
 .card .content {
   font-size: 12px;
+}
+
+@media (min-width: 768px) {
+  .card {
+    width: 30%;
+  }
 }
 
 /*# sourceMappingURL=Card.css.map */
