--- a/src/styles/scss/card.scss
+++ b/src/styles/scss/card.scss
@@ -1,9 +1,10 @@
 .card{
-    width: 30%;
+    width: 80%;
     background-color: transparent;
     text-align: start;
     border: none;
     color: #707070;
+    padding: 10px 0;
     img{
         width: 100%;
         box-shadow: 0px 2px 4px rgba(0,0,0,0.18);
@@ -15,5 +16,12 @@
     }
     .content{
       font-size: 12px;  
+    }
+}
+
+//========================RESPONSIVENESS========================
+@media (min-width: 768px) { 
+    .card{
+        width: 30%;
     }
 }
