--- a/src/styles/css/Card.css
+++ b/src/styles/css/Card.css
@@ -19,6 +19,11 @@
   font-size: 12px;
 }
 
+@media (min-width: 576px) {
+  .card {
+    width: 40%;
+  }
+}
 @media (min-width: 768px) {
   .card {
     width: 30%;
