--- a/src/styles/css/Navbar.css
+++ b/src/styles/css/Navbar.css
@@ -6,41 +6,9 @@
   top: 0;
   left: 0;
   justify-content: space-between;
-  color: #707070;
   background-color: white;
   z-index: 99;
   display: none;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-}
-.logo img {
-  height: 25px;
-}
-
-.links {
-  width: 50%;
-  font-weight: 700;
-  font-size: 12px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.links button {
-  background-color: #C4D446;
-  color: white;
-  border: 1px solid #C4D446;
-  padding: 10px 20px;
-  border-radius: 0.2rem;
-  font-weight: 700;
-  transition-duration: 0.2s;
-}
-.links button:hover {
-  border: 1px solid #C4D446;
-  color: #C4D446;
-  background-color: transparent;
 }
 
 .mobileNav {
@@ -103,6 +71,42 @@
   transition: all 0.3s linear;
   position: relative;
   transform-origin: 1px;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+.logo img {
+  height: 25px;
+}
+
+.links {
+  width: 50%;
+  font-weight: 700;
+  font-size: 12px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.links a {
+  color: #707070;
+  text-decoration: none;
+}
+.links button {
+  background-color: #C4D446;
+  color: white;
+  border: 1px solid #C4D446;
+  padding: 10px 20px;
+  border-radius: 0.2rem;
+  font-weight: 700;
+  transition-duration: 0.2s;
+  cursor: pointer;
+}
+.links button:hover {
+  border: 1px solid #C4D446;
+  color: #C4D446;
+  background-color: transparent;
 }
 
 @media (min-width: 768px) {
