--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -4,9 +4,19 @@
     font-family: 'DM Sans', sans-serif;
 }
 
+section{
+    padding: 60px 15vw;
+}
+
+.subtitle{
+    color: #707070;
+    text-align: center;
+    font-size: 32px;
+}
+
 .hero{
-    padding: 50px 15vw;
-    height: 50vh;
+    padding: 0px 15vw;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,8 +33,6 @@
 }
 
 .cards{
-    padding: 60px 15vw;
-    // width: 100%;
     background-color: #F5F5F5;
     .cardParent{
         display: flex;
@@ -33,12 +41,10 @@
     }
 }
 
-.subtitle{
-    color: #707070;
-    text-align: center;
-    font-size: 32px;
-}
-
-.accordions{
-    padding: 60px 15vw;
+//========================RESPONSIVENESS========================
+@media (min-width: 768px) { 
+    .hero{
+        padding: 100px 15vw;
+        height: fit-content;
+    }
 }
