--- a/src/styles/scss/card.scss
+++ b/src/styles/scss/card.scss
@@ -20,6 +20,12 @@
 }
 
 //========================RESPONSIVENESS========================
+@media (min-width: 576px) { 
+    .card{
+        width: 40%;
+    }
+}
+
 @media (min-width: 768px) { 
     .card{
         width: 30%;
