--- a/src/styles/scss/navbar.scss
+++ b/src/styles/scss/navbar.scss
@@ -7,41 +7,9 @@
     top: 0;
     left: 0;
     justify-content: space-between;
-    color: #707070;
     background-color: white;
     z-index: 99;
     display: none;
-}
-
-.logo{
-    display: flex;
-    align-items: center;
-    img{
-        height: 25px;
-    }
-}
-
-.links{
-    width: 50%;
-    font-weight: 700;
-    font-size: 12px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    button{
-        background-color: #C4D446;
-        color: white;
-        border: 1px solid #C4D446;
-        padding: 10px 20px;
-        border-radius: 0.2rem;
-        font-weight: 700;
-        transition-duration: 0.2s;
-        &:hover{
-            border: 1px solid #C4D446;
-            color: #C4D446;
-            background-color: transparent;
-        }
-    }
 }
 
 
@@ -105,6 +73,43 @@
             transition: all 0.3s linear;
             position: relative;
             transform-origin: 1px;
+        }
+    }
+}
+
+//========================BOTH NAVS========================
+.logo{
+    display: flex;
+    align-items: center;
+    img{
+        height: 25px;
+    }
+}
+
+.links{
+    width: 50%;
+    font-weight: 700;
+    font-size: 12px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    a{
+        color: #707070;
+        text-decoration: none;
+    }
+    button{
+        background-color: #C4D446;
+        color: white;
+        border: 1px solid #C4D446;
+        padding: 10px 20px;
+        border-radius: 0.2rem;
+        font-weight: 700;
+        transition-duration: 0.2s;
+        cursor: pointer;
+        &:hover{
+            border: 1px solid #C4D446;
+            color: #C4D446;
+            background-color: transparent;
         }
     }
 }
